--- a/test/view/purchase_order_view.xml
+++ b/test/view/purchase_order_view.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
+    <!--===========Purchase Order Category From View==========-->
     <record id="purchase_order_form_inherit_category" model="ir.ui.view">
         <field name="name">purchase.order.form.inherit.category</field>
         <field name="model">purchase.order</field>
